Bug 4678 - sessreg broken on GNU/kFreeBSD
Summary: sessreg broken on GNU/kFreeBSD
Status: CLOSED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/xdm (show other bugs)
Version: unspecified
Hardware: Other other
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-10-03 10:16 UTC by Robert Millan
Modified: 2006-04-22 00:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch (379 bytes, patch)
2005-10-03 10:17 UTC, Robert Millan
no flags Details | Splinter Review

Description Robert Millan 2005-10-03 10:16:55 UTC
sessreg assumes BSDish UTMP on GNU/kFreeBSD, but we have Sysv-style UTMP as 
provided by Glibc.  This causes xdm (and other login managers that use sessreg) 
to fail to initialise a session.
Comment 1 Robert Millan 2005-10-03 10:17:27 UTC
Created attachment 3472 [details] [review]
patch
Comment 2 Alan Coopersmith 2005-10-03 10:53:37 UTC
Committed to CVS head:

CVSROOT:	/cvs/xorg
Module name:	xc
Changes by:	alanc@gabe.freedesktop.org	05/10/03 10:50:57

Log message:
  2005-10-03  Alan Coopersmith  <alan.coopersmith@sun.com>
  
  	* lib/xtrans/Xtranssock.c:
  	Bug #4678 <https://bugs.freedesktop.org/show_bug.cgi?id=4678>
  	Patch #3472 <https://bugs.freedesktop.org/attachment.cgi?id=3472>
  	Use SysV-style utmp on GNU/kFreeBSD (Robert Millan)

Modified files:
      xc/programs/xdm/:
        sessreg.c 
      ./:
        ChangeLog 
  
  Revision      Changes    Path
  1.7           +1 -1      xc/programs/xdm/sessreg.c
  http://cvs.freedesktop.org/xorg/xc/programs/xdm/sessreg.c
  1.1379        +7 -0      xc/ChangeLog
  http://cvs.freedesktop.org/xorg/xc/ChangeLog


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.