Bug #4678 <https://bugs.freedesktop.org/show_bug.cgi?id=4678> Patch #3472     <https://bugs.freedesktop.org/attachment.cgi?id=3472> Use SysV-style     utmp on GNU/kFreeBSD (Robert Millan)